# rsteract

./: Cargo.toml  README.md
examples/: stdio.rs
src/: lib.rs  stdio.rs
