[package]
name = "rsteract"
version = "0.1.0"
edition = "2021"
authors = ["Alessandro Pezzato <alessandro@pezzato.net>"]
description = "From stdin to String and back to stdout"
homepage = "https://github.com/alepez/rsteract"
repository = "https://github.com/alepez/rsteract"
readme = "README.md"
license = "MIT/Apache-2.0"
